--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -43,4 +43,200 @@ body {
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
   overflow-x: hidden !important;
-  min-height: 50rem; }
+  min-height: 60rem; }
+
+.Box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1 0 50%; }
+
+.form {
+  display: flex;
+  flex: 0 0 40%;
+  border-right: 1px solid var(--color-primary-dark);
+  justify-content: center; }
+  @media only screen and (max-width: 68.75em) {
+    .form {
+      margin-right: 10rem; } }
+
+.output {
+  display: flex;
+  align-items: center;
+  margin-right: 30rem;
+  flex-direction: column; }
+  @media only screen and (max-width: 75em) {
+    .output {
+      margin-right: 10rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .output {
+      align-items: flex-start;
+      display: flex;
+      flex-direction: column; } }
+  @media only screen and (max-width: 68.75em) {
+    .output {
+      margin-right: 10rem;
+      display: flex;
+      justify-content: flex-start; } }
+
+.book {
+  font-size: 4.5rem;
+  font-family: sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: center;
+  color: transparent;
+  -webkit-background-clip: text;
+  letter-spacing: .5rem;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  transition: all .2s; }
+  @media only screen and (max-width: 56.25em) {
+    .book {
+      font-size: 3.5rem; } }
+  .book:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem 0; }
+
+#Book-form > *:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.lbl {
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: transparent;
+  -webkit-background-clip: text;
+  margin-bottom: .5rem; }
+  @media only screen and (max-width: 68.75em) {
+    .lbl {
+      font-size: 2rem; } }
+
+.input {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: var(--color-grey-light-2);
+  border: none;
+  padding: 1rem 2rem;
+  border-radius: 100px;
+  width: 100%;
+  transition: all .2s;
+  margin-right: -3.25rem; }
+  @media only screen and (max-width: 68.75em) {
+    .input {
+      width: 95%; } }
+  .input:focus {
+    outline: none;
+    width: 110%;
+    background-color: var(--color-grey-light-3); }
+  .input::-webkit-input-placeholder {
+    color: var(--color-grey-light-4);
+    font-family: cursive; }
+
+.btn {
+  font-size: 2.25rem;
+  border: none;
+  border-radius: 10rem;
+  width: 17rem;
+  margin-top: 2rem;
+  position: relative;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all .2s;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark)); }
+  @media only screen and (max-width: 68.75em) {
+    .btn {
+      width: 14rem;
+      font-size: 2rem; } }
+  .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: var(--shadow-dark); }
+    .btn:hover::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0; }
+  .btn:focus {
+    outline: none;
+    transform: translateY(-1px); }
+
+.option {
+  margin-bottom: 3rem; }
+  @media only screen and (max-width: 37.5em) {
+    .option {
+      margin-right: 10rem; } }
+
+.form-search {
+  display: flex; }
+
+.select {
+  font-family: inherit;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  color: #fff;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  outline: none;
+  border: none;
+  border-radius: 100px;
+  width: 70%;
+  transition: all .2s;
+  margin-right: 3.5rem;
+  padding: 1rem 1.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .select {
+      margin-right: 2.2rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .select {
+      margin-bottom: 2rem;
+      margin-right: 19rem;
+      display: block; } }
+
+@media only screen and (max-width: 37.5em) {
+  .form-search {
+    width: 20rem;
+    margin-right: 23rem;
+    text-align: left;
+    display: block; } }
+
+option {
+  border-bottom: 1px solid var(--color-primary-dark);
+  color: var(--color-primary-dark);
+  width: 20rem; }
+  @media only screen and (max-width: 56.25em) {
+    option {
+      width: 3rem;
+      margin-right: 40rem; } }
+
+table {
+  border-collapse: collapse; }
+  @media only screen and (max-width: 37.5em) {
+    table {
+      margin-bottom: 2rem;
+      display: block; } }
+
+table, tr, th {
+  border: 1px solid var(--color-grey-light-4); }
+
+th {
+  padding: 1rem 1.5rem;
+  text-transform: uppercase; }
+
+.Book-list table, .Book-list tr, .Book-list th {
+  border: 1px solid var(--color-grey-light-4); }
+
+.error, .success {
+  color: white;
+  font-size: 1.2em;
+  padding: 16px 40px; }
+
+.error {
+  background-color: red; }
+
+.success {
+  background-color: green; }
