--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -169,13 +169,13 @@ option{
 
 }
 //
-// .table{
-//   margin-right: 13rem;
-//   @media only screen and (max-width: $bp-small) {
-//         margin-right:20rem;
-//
-// }
-// }
+.table{
+  margin-right: 13rem;
+  @media only screen and (max-width: $bp-small) {
+        margin-right:20rem;
+
+}
+}
 table {
   border-collapse: collapse;
   @media only screen and (max-width: $bp-small) {
@@ -186,23 +186,42 @@ table {
 
 
 }
-table, tr, th {
-  border: 1px solid var(--color-grey-light-4);
+table {
+  table-layout:auto;
+  
+  width: 100%;
+  font-size: 1.4rem;
+  // border-collapse: collapse;
+  border: 2px solid purple;
 }
 th{
-  padding:1rem 1.5rem;
-  text-transform: uppercase;
+   border: 2px solid purple;
+   padding:1rem 1rem;
 }
-.Book-list{
-  table, tr, th {
-    border: 1px solid var(--color-grey-light-4);
 
+.Book-list{ 
+  font-size: 1rem;
+  font-family: sans-serif;
+  font-weight: 300;
+border-collapse:collapse; 
+border: 1px solid var(--color-grey-light-4);
+
+th,td ,tr{
+    // border: 1px solid var(--color-grey-light-4);
+    padding:1rem 2rem;
+    text-transform: uppercase;
+    text-align: center;  
 
 }
+     
+
 }
 .error,.success{
     color:white;
-    font-size: 1.2em;
+    font-size: 1.4em;
+    text-transform: uppercase;
+    text-align: center;
+    text-shadow: var( --shadow-dark);
     padding:16px 40px;
 }
 .error{
